@@ -78,6 +78,10 @@
                ;;        ,vd (ror32 (logxor ,vd ,va) 8)
                ;;        ,vc (mod32+ ,vc ,vd)
                ;;        ,vb (ror32 (logxor ,vb ,vc) 7))))
+               #+(and sbcl x86-64)
+               `(multiple-value-setq (,va ,vb ,vc ,vd)
+                  (fast-blake2s-mixing ,va ,vb ,vc ,vd ,x ,y))
+               #-(and sbcl x86-64)
                `(setf ,va (mod32+ (mod32+ ,va ,vb) ,x)
                       ,vd (rol32 (logxor ,vd ,va) 16)
                       ,vc (mod32+ ,vc ,vd)
